fix layout issue at mid-size screen

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2068,9 +2068,7 @@ footer {
 		margin: 0 auto;
 		padding: 0;
 	}
-	.grid-80 {
-		width: 90%;
-	}
+
 .columns {
 	.grid-10,
 	.grid-20,
